# hdt

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  LICENSE  README.md  codemeta.json  paper.bib  paper.md  rustfmt.toml  test-wasm.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bugreport.yml  featurerequest.yml
.github/workflows/: lint_and_test.yml  test.yml
benches/: bench.rs  criterion.rs  gungraun.rs  iai.rs
examples/: query.rs  write.rs
src/: bitmap.rs  concurrent_interner.rs  control_info.rs  dict_sect_pfc.rs  dictionary.rs  four_sect_dict.rs  four_sect_dict.rs.orig  hdt.rs  hdt_graph.rs  hdt_reader.rs  hdt_wasm.rs  header.rs  lib.rs  main.rs  nt.rs  object_iter.rs  predicate_iter.rs  predicate_object_iter.rs  rdf.rs  sequence.rs  sparql.rs  triple_sect.rs  triples.rs  triples_streaming.rs  vocab.rs  wasm.rs  wasm_manual.rs
src/containers/: adj_list.rs  bitmap.rs  control_info.rs  mod.rs  rdf.rs  sequence.rs  vbyte.rs
src/dict/: dict_sect_pfc.rs  four_sect_dict.rs  mod.rs
src/hdt_graph/: term.rs
src/rdf2hdt/: bitmap_triples.rs  builder.rs  common.rs  dictionary.rs  main.rs  mod.rs  rdf_reader.rs  vocab.rs
src/triples/: object_iter.rs  predicate_iter.rs  predicate_object_iter.rs  predicate_object_iter2.rs  subject_iter.rs
tests/resources/: apple.nt  apple.ttl  query1.rq  snikmeta.hdt  test-wasm.html  yago_header.hdt
