[package]
name = "hdt"
version = "0.3.0"
repository = "https://github.com/konradhoeffner/hdt"
authors = ["Tim Baccaert <tbaccaer@vub.be>", "Konrad Höffner"]
license = "MIT"
description = "Library for the Header Dictionary Triples (HDT) RDF compression format."
keywords = ["rdf", "hdt", "compression", "file-format"]
categories = ["compression", "filesystem", "parsing", "web-programming"]
edition = "2024"
rust-version = "1.85"

[package.metadata."docs.rs"]
all-features = true

[dependencies]
bytesize = "2"
crc = "3"
iref = "3"
langtag = "0.4"
ntriple = "0.1"
sophia = { version = "0.9", optional = true }
#sucds = "0.8.3" # not released yet, use git until then
sucds = { git = "https://github.com/kampersanda/sucds.git" }
thiserror = "2"
log = "0.4"
mownstr = "0.3"
bincode = { version = "2", optional = true, default-features = false, features = ["std", "serde"] }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = ["sophia"]
sophia = ["dep:sophia"]
cache = ["dep:serde", "dep:bincode"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[lib]
bench = false

[profile.test]
opt-level = 1

[dev-dependencies]
pretty_assertions = "1"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
criterion = { version = "0.6", default-features = false, features = ["cargo_bench_support", "html_reports"] }
#iai = "0.1"
iai = { git = "https://github.com/sigaloid/iai", rev = "d56a597" } # until https://github.com/bheisler/iai/pull/35 is merged
color-eyre = "0.6"
fs-err = "3.1.0"
