[package]
name = "hdt"
version = "0.4.0-alpha.0"
repository = "https://github.com/konradhoeffner/hdt"
authors = ["Tim Baccaert <tbaccaer@vub.be>", "Konrad Höffner"]
license = "MIT"
description = "Library for the Header Dictionary Triples (HDT) RDF compression format."
keywords = ["rdf", "hdt", "compression", "file-format"]
categories = ["compression", "filesystem", "parsing", "web-programming"]
readme = "README.md"
edition = "2024"
rust-version = "1.87"

[package.metadata."docs.rs"]
all-features = true

[dependencies]
bytesize = "2"
crc = "3"
ntriple = "0.1"
sophia = { version = "0.9", optional = true }
sucds = "0.8.3"
thiserror = "2"
log = "0.4"
mownstr = "0.3"
bincode = { version = "2", optional = true, default-features = false, features = ["std", "serde"] }
serde = { version = "1", optional = true, features = ["derive"] }
spareval = { version = "0.2.0-beta.3" , optional = true }
spargebra = { version = "0.4.0-beta.2", optional = true, default-features = false }

[features]
default = ["sophia"]
sophia = ["dep:sophia"]
cache = ["dep:serde", "dep:bincode"]
sparql = ["dep:spareval", "dep:spargebra"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[lib]
bench = false

[profile.test]
opt-level = 1

[dev-dependencies]
pretty_assertions = "1"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support", "html_reports"] }
#iai = "0.1"
iai = { git = "https://github.com/sigaloid/iai", rev = "d56a597" } # until https://github.com/bheisler/iai/pull/35 is merged
color-eyre = "0.6"
fs-err = "3.1.0"
sparesults = "0.2"
walkdir = "2.5.0"
