[package]
name = "hdt"
version = "0.5.0"
repository = "https://github.com/konradhoeffner/hdt"
authors = ["Tim Baccaert <tbaccaer@vub.be>", "Konrad Höffner"]
license = "MIT"
description = "Library for the Header Dictionary Triples (HDT) RDF compression format."
keywords = ["rdf", "hdt", "compression", "file-format"]
categories = ["compression", "filesystem", "parsing", "web-programming"]
readme = "README.md"
edition = "2024"
rust-version = "1.87"

[package.metadata."docs.rs"]
all-features = true

[dependencies]
bytesize = "2"
crc = "3"
ntriple = "0.1"
sophia = { version = "0.9", optional = true }
sucds = "0.8.3"
thiserror = "2"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
mownstr = "0.3"
bincode = { version = "2", optional = true, default-features = false, features = ["std", "serde"] }
rayon = { version = "1.11.0", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
spareval = { version = "0.2" , optional = true }
spargebra = { version = "0.4", optional = true, default-features = false }
eyre = { version = "0.6", optional = true }
color-eyre = { version = "0.6", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }
fs-err = { version = "3.1.0", optional = true }
bitset-core = { version = "0.1.1", optional = true }
oxttl = { version = "0.2.1", optional = true }
lasso = { version = "0.7.3", features = ["multi-threaded"], optional = true }

[features]
default = ["sophia"]
sophia = ["dep:sophia"]
cli = ["sophia", "nt", "dep:eyre", "dep:color-eyre", "dep:clap","dep:fs-err"]
cache = ["dep:serde", "dep:bincode"]
sparql = ["dep:spareval", "dep:spargebra"]
nt = ["dep:lasso","dep:oxttl","dep:bitset-core"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[lib]
bench = false

[[bin]]
name = "hdt"
required-features = ["cli", "sophia"]

[profile.test]
opt-level = 1

[dev-dependencies]
pretty_assertions = "1"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support", "html_reports"] }
#iai = "0.1"
iai = { git = "https://github.com/sigaloid/iai", rev = "d56a597" } # until https://github.com/bheisler/iai/pull/35 is merged
color-eyre = "0.6"
fs-err = "3.1.0"
sparesults = "0.3"
walkdir = "2.5.0"
